--- a/niffler-e-2-e-tests/build.gradle
+++ b/niffler-e-2-e-tests/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        junitVersion = '5.13.4'
+        junitVersion = '6.0.0'
         allureVersion = '2.30.0'
         selenideVersion = '7.10.1'
         okhttp3Version = '5.1.0'
@@ -115,7 +115,8 @@ dependencies {
     testImplementation "com.google.protobuf:protobuf-java:${project.ext.protobufVersion}"
     testImplementation "com.google.protobuf:protobuf-java-util:${project.ext.protobufVersion}"
     testImplementation project(':niffler-grpc-common')
-    compileOnly 'jakarta.annotation:jakarta.annotation-api:1.3.5' // Java 9+ compatibility - Do NOT update to 2.0.0
+    compileOnly 'jakarta.annotation:jakarta.annotation-api:1.3.5'
+    // Java 9+ compatibility - Do NOT update to 2.0.0
     // SOAP
     testImplementation "com.sun.xml.messaging.saaj:saaj-impl:${saajVersion}"
     testImplementation "jakarta.xml.bind:jakarta.xml.bind-api:${project.ext.jakartaJaxbVersion}"
@@ -139,4 +140,8 @@ tasks.register('printVersion') {
     doLast {
         println project.version
     }
+}
+
+test {
+    useJUnitPlatform()
 }
