--- a/niffler-userdata/src/main/resources/application.yaml
+++ b/niffler-userdata/src/main/resources/application.yaml
@@ -1,6 +1,9 @@
 server:
   port: 8089
-
+grpc:
+  server:
+    port: 8088
+    max-inbound-message-size: 1MB
 spring:
   application:
     name: niffler-userdata
